samples/_failures_safe/1761326019_ebd99b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3f68b391.c: In function ‘main’:
./samples/SAFE/__tmp_3f68b391.c:159:16: error: missing terminating " character
  159 |         printf("%4d %3d %-10
      |                ^~~~~~~~~~~~~
./samples/SAFE/__tmp_3f68b391.c:159:9: error: expected expression at end of input
  159 |         printf("%4d %3d %-10
      |         ^~~~~~
./samples/SAFE/__tmp_3f68b391.c:159:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3f68b391.c:159:9: error: expected declaration or statement at end of input
